Add download page

--- a/website/_includes/bedrock/base-resp.html
+++ b/website/_includes/bedrock/base-resp.html
@@ -79,7 +79,9 @@
       {% endif %}
     {% endblock messages %}
 
-    {% block content %}{% endblock %}
+    <main>
+      {% block content %}{% endblock %}
+    </main>
 
     {% block email_form %}{{ email_newsletter_form() }}{% endblock %}
 
