--- a/website/_includes/base-resp.html
+++ b/website/_includes/base-resp.html
@@ -30,6 +30,9 @@
               <a href="{{ url('thunderbird.features') }}" class="nav-link">{{_('Features')}}</a>
             </li>
             <li>
+              <a href="{{ url('thunderbird.organizations') }}" class="nav-link">{{_('For Organization')}}</a>
+            </li>
+            <li>
               <a href="https://addons.thunderbird.net" target="_blank" class="nav-link">{{_('Add-ons')}}</a>
             </li>
             <li>
