--- a/website/_includes/product-all-macros.html
+++ b/website/_includes/product-all-macros.html
@@ -45,7 +45,7 @@
 
         {% if letter.first != build.name_en[:1] %}
           {% set letter.first = build.name_en[:1] %}
-          <h4 id="{{ letter.first }}" class="header-section w-full mb-0 pt-6 pl-3">
+          <h4 id="{{ letter.first }}" class="font-2xl font-bold w-full mt-0 mb-2 pt-6 pl-3 text-black-lightest">
             {{ letter.first }}
           </h4>
         {% endif %}
@@ -59,14 +59,14 @@
 {% endmacro %}
 
 {% macro build_row(platforms, build) %}
-  <aside id="{{ build.locale }}" data-search="{{ build.name_en|lower }}, {{ build.name_native|lower }}" class="flex flex-row flex-wrap items-center bg-white p-2 pl-3 pr-3 shadow-md mb-4 rounded">
-    <h4 class="subheader-section flex flex-col flex-1 mb-0">
+  <aside id="{{ build.locale }}" data-search="{{ build.name_en|lower }}, {{ build.name_native|lower }}" class="flex flex-row flex-wrap items-center bg-white shadow-md mb-4 rounded">
+    <h4 class="subheader-section flex flex-col flex-1 mb-0 p-2 pl-3 pr-3">
       {{ build.name_en }}
       <small class="font-normal font-regular tracking-normal normal-case text-black-lightest">
         {{ build.name_native }}
       </small>
     </h4>
-    <aside>
+    <aside class="p-1 pl-2 pr-2">
       {% for p_name, p_label in platforms %}
         {{ build_link(build, p_name, _('%(platform)s')|format(platform=p_label|replace('\n', ' '))) }}
       {% endfor %}
