--- a/website/_includes/base-resp.html
+++ b/website/_includes/base-resp.html
@@ -30,7 +30,7 @@
               <a href="{{ url('thunderbird.features') }}" class="nav-link">{{_('Features')}}</a>
             </li>
             <li>
-              <a href="{{ url('thunderbird.organizations') }}" class="nav-link">{{_('For Organization')}}</a>
+              <a href="{{ url('thunderbird.organizations') }}" class="nav-link">{{_('For Organizations')}}</a>
             </li>
             <li>
               <a href="https://addons.thunderbird.net" target="_blank" class="nav-link">{{_('Add-ons')}}</a>
