Add System Requirements page

--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -26,3 +26,4 @@
 @import "components/buttons.less";
 @import "components/forms.less";
 @import "components/headings.less";
+@import "components/markup.less";
