Add Release Notes page

--- a/assets/less/components/markup.less
+++ b/assets/less/components/markup.less
@@ -18,4 +18,14 @@
   hr {
     &:extend(.mb-10, .mt-2, .border-0, .border-t, .border-grey-light, .border-solid, .w-full);
   }
+
+  a {
+    &:extend(.inline-link, .text-blue);
+  }
+}
+
+.no-padding {
+  p {
+    &:extend(.p-0, .m-0);
+  }
 }
