--- a/assets/less/base/variables.less
+++ b/assets/less/base/variables.less
@@ -23,6 +23,8 @@
   blue-darker: #36385A;
   green: #058B00;
   green-light: #11AD00;
+  purple: #ad3bff;
+  red: #a4000f;
 }
 
 /*-------------------------
