Remove classes from translatable strings

--- a/assets/less/components/links.less
+++ b/assets/less/components/links.less
@@ -67,3 +67,15 @@ a {
     &:extend(.bg-blue);
   }
 }
+
+.p-links {
+  a {
+    &:extend(.inline-link);
+  }
+}
+
+.p-links-blue {
+  a {
+    &:extend(.inline-link, .text-blue);
+  }
+}
