--- a/website/_includes/base-resp.html
+++ b/website/_includes/base-resp.html
@@ -30,10 +30,10 @@
               <a href="{{ url('thunderbird.features') }}" class="nav-link">{{_('Features')}}</a>
             </li>
             <li>
-              <a href="{{ url('thunderbird.organizations') }}" class="nav-link">{{_('For Organizations')}}</a>
+              <a href="https://addons.thunderbird.net" target="_blank" class="nav-link">{{_('Add-ons')}}</a>
             </li>
             <li>
-              <a href="https://addons.thunderbird.net" target="_blank" class="nav-link">{{_('Add-ons')}}</a>
+              <a href="{{ url('thunderbird.get-involved') }}" class="nav-link">{{_('Get Involved')}}</a>
             </li>
             <li>
               <a href="{{ url('support') }}" class="nav-link" target="_blank">{{_('Get Help')}}</a>
