--- a/website/_includes/site-footer.html
+++ b/website/_includes/site-footer.html
@@ -7,12 +7,12 @@
       </a>
 
       <nav id="footer-main" role="navigation" class="mt-2">
-        <ul class="list-none p-0 flex items-center text-white font-md">
+        <ul class="list-none p-0 flex items-center text-white nav-footer">
           <li>
-            <a href="{{ url('thunderbird.features') }}" class="ml-0 nav-link">{{_('Features')}}</a>
+            <a href="{{ url('thunderbird.organizations') }}" class="nav-link" target="_blank">{{_('For Organizations')}}</a>
           </li>
           <li>
-            <a href="https://addons.thunderbird.net" target="_blank" class="nav-link">{{_('Add-ons')}}</a>
+            <a href="{{ url('thunderbird.get-involved') }}" class="nav-link" target="_blank">{{_('Get Involved')}}</a>
           </li>
           <li>
             <a href="{{ url('support') }}" class="nav-link" target="_blank">{{_('Get Help')}}</a>
