Add many remaining pages. (#123)
* Get Involved page

* Organization page

* Icons sections updated

* All releases page

* Beta release page

* All releases page

* Add System Requirements page

* Add Release Notes page

* Add Email providers page

* Add 404 page

* Remove classes from translatable strings

* Strip inline classes from translatable strings

* Update nav and footer links

--- a/website/_includes/base-resp.html
+++ b/website/_includes/base-resp.html
@@ -33,6 +33,9 @@
               <a href="https://addons.thunderbird.net" target="_blank" class="nav-link">{{_('Add-ons')}}</a>
             </li>
             <li>
+              <a href="{{ url('thunderbird.get-involved') }}" class="nav-link">{{_('Get Involved')}}</a>
+            </li>
+            <li>
               <a href="{{ url('support') }}" class="nav-link" target="_blank">{{_('Get Help')}}</a>
             </li>
             <li>
