--- a/assets/less/components/buttons.less
+++ b/assets/less/components/buttons.less
@@ -8,23 +8,7 @@ button {
 }
 
 .btn-donate {
-  &:extend(
-    .ml-6,
-    .mr-6,
-    .text-white,
-    .font-base,
-    .font-semibold,
-    .no-underline,
-    .uppercase,
-    .block,
-    .pt-2,
-    .pb-2,
-    .pl-3,
-    .pr-3,
-    .bg-donate-button,
-    .rounded-xs,
-    .shadow
-  );
+  &:extend(.ml-6, .mr-6, .text-white, .font-base, .font-semibold, .no-underline, .uppercase, .block, .pt-2, .pb-2, .pl-3, .pr-3, .bg-donate-button, .rounded-xs, .shadow);
 
   &:hover,
   &:focus {
@@ -34,22 +18,7 @@ button {
 }
 
 .btn-download {
-  &:extend(
-    .text-white,
-    .font-md,
-    .font-semibold,
-    .no-underline,
-    .uppercase,
-    .inline-block,
-    .pt-4,
-    .pb-4,
-    .pl-7,
-    .pr-7,
-    .mb-5,
-    .bg-download-button,
-    .rounded-xs,
-    .shadow
-  );
+  &:extend(.text-white, .font-md, .font-semibold, .no-underline, .uppercase, .inline-block, .pt-4, .pb-4, .pl-7, .pr-7, .mb-5, .bg-download-button, .rounded-xs, .shadow);
 
   &:hover,
   &:focus {
@@ -58,10 +27,18 @@ button {
   }
 }
 
+.btn-download-inline {
+  &:extend(.m-1, .text-green-light, .font-base, .font-semibold, .no-underline, .uppercase, .inline-block, .p-2, .bg-white, .rounded-sm, .border-green-light, .border, .border-solid);
+
+  &:hover,
+  &:focus {
+    &:extend(.shadow-md, .bg-green-light, .text-white);
+    .transform(translateY(-7%));
+  }
+}
+
 .btn-body {
-  &:extend(.relative, .bg-white, .text-green, .font-regular, .font-semibold, .no-underline, .uppercase, .inline-block, .pt-4, .pb-4, .pl-5, .pr-9, .border-green-light, .rounded-sm);
-  border-style: solid;
-  border-width: 1px;
+  &:extend(.relative, .bg-white, .text-green, .font-regular, .font-semibold, .no-underline, .uppercase, .inline-block, .pt-4, .pb-4, .pl-5, .pr-9, .border-green-light, .rounded-sm, .border, .border-solid);
 
   span {
     &:extend(.absolute, .flex, .items-center, .w-2, .pin-r, .pin-t, .pin-b, .pr-4);
@@ -80,6 +57,15 @@ button {
   &.btn-secondary {
     &:extend(.text-blue, .border-transparent, .bg-transparent, .normal-case);
   }
+
+  &.btn-release {
+    &:extend(.p-2);
+
+    &:hover,
+    &:focus {
+      &:extend(.text-white, .bg-blue);
+    }
+  }
 }
 
 .btn-block-white {
@@ -93,9 +79,7 @@ button {
 }
 
 .btn-inline {
-  &:extend(.rounded-sm, .border-none, .bg-grey-light, .text-black, .p-1, .pl-2, .pr-2, .ml-2);
-  -moz-appearance: none;
-  appearance: none;
+  &:extend(.rounded-sm, .border-none, .bg-grey-light, .text-black, .p-1, .pl-2, .pr-2, .ml-2, .appearance-none);
 
   &:hover,
   &:focus {
