--- a/assets/less/components/links.less
+++ b/assets/less/components/links.less
@@ -9,6 +9,7 @@ a {
 
 .nav-link {
   &:extend(.ml-6, .mr-6, .text-white, .no-underline, .relative, .pt-2, .pb-2);
+  white-space: nowrap;
 
   &:after {
     &:extend(.absolute, .block, .pin-l, .pin-r, .pin-b, .bg-white, .opacity-0);
@@ -25,6 +26,10 @@ a {
       .transform(translateY(0));
     }
   }
+}
+
+.nav-footer .nav-link {
+  &:extend(.ml-3, .mr-3, .text-white, .no-underline, .relative, .pt-1, .pb-1);
 }
 
 .small-link {
@@ -65,5 +70,17 @@ a {
   &:hover,
   &:focus {
     &:extend(.bg-blue);
+  }
+}
+
+.p-links {
+  a {
+    &:extend(.inline-link);
+  }
+}
+
+.p-links-blue {
+  a {
+    &:extend(.inline-link, .text-blue);
   }
 }
