--- a/assets/less/sandstone/buttons.less
+++ b/assets/less/sandstone/buttons.less
@@ -317,8 +317,7 @@ ul.download-list {
 .download-button .os_win64,
 .download-button .os_linux,
 .download-button .os_linux64,
-// Uncomment this to enable the win64 download buttons:
-// .win7up.x86.x64 .download-button .os_win,
+.win7up.x86.x64 .download-button .os_win,
 .android .download-button-desktop,
 .windows.arm .download-button .os_win,
 .linux.arm .download-button .os_linux,
@@ -332,8 +331,7 @@ ul.download-list {
     display: none !important;
 }
 
-// Uncomment this to enable the win64 download buttons:
-// .win7up.x86.x64 .download-button .os_win64,
+.win7up.x86.x64 .download-button .os_win64,
 .linux .download-button .os_linux,
 .linux.x86.x64 .download-button .os_linux64,
 .windows .download-button .os_win,
