--- a/assets/less/sandstone/buttons.less
+++ b/assets/less/sandstone/buttons.less
@@ -313,6 +313,7 @@ ul.download-list {
 }
 
 // OS detection
+.download-button .os_msi,
 .download-button .os_winsha1,
 .download-button .os_win64,
 .download-button .os_linux,
