Add MSI links to all download page and change platform names to include 32-bit.

--- a/assets/less.old/sandstone/buttons.less
+++ b/assets/less.old/sandstone/buttons.less
@@ -313,6 +313,7 @@ ul.download-list {
 }
 
 // OS detection
+.download-button .os_msi,
 .download-button .os_winsha1,
 .download-button .os_win64,
 .download-button .os_linux,
