--- a/assets/less/base/variables.less
+++ b/assets/less/base/variables.less
@@ -47,6 +47,109 @@
 }
 
 /*-------------------------
+* Sizing
+*--------------------------*/
+@widths: {
+  w-auto:auto;
+  w-px:1px;
+  w-0: 0;
+  w-1: 0.25rem;
+  w-2: 0.5rem;
+  w-3: 0.75rem;
+  w-4: 1rem;
+  w-5: 1.25rem;
+  w-6: 1.5rem;
+  w-8: 2rem;
+  w-10: 2.5rem;
+  w-12: 3rem;
+  w-16: 4rem;
+  w-20: 5rem;
+  w-24: 6rem;
+  w-32: 8rem;
+  w-40: 10rem;
+  w-48: 12rem;
+  w-56: 14rem;
+  w-64: 16rem;
+}
+
+// -- is converted to /, .w-1/2, .w-1/3, etc.
+@widths-percentage: {
+  w-1--2: 50%;
+  w-1--3: 33.333333%;
+  w-2--3: 66.666667%;
+  w-1--4: 25%;
+  w-2--4: 50%;
+  w-3--4: 75%;
+  w-1--5: 20%;
+  w-2--5: 40%;
+  w-3--5: 60%;
+  w-4--5: 80%;
+  w-1--6: 16.666667%;
+  w-2--6: 33.333333%;
+  w-3--6: 50%;
+  w-4--6: 66.666667%;
+  w-5--6: 83.333333%;
+  w-1--12: 8.333333%;
+  w-2--12: 16.666667%;
+  w-3--12: 25%;
+  w-4--12: 33.333333%;
+  w-5--12: 41.666667%;
+  w-6--12: 50%;
+  w-7--12: 58.333333%;
+  w-8--12: 66.666667%;
+  w-9--12: 75%;
+  w-10--12: 83.333333%;
+  w-11--12: 91.666667%;
+  w-full: 100%;
+  w-screen: 100vw;
+}
+
+@max-widths: {
+  max-w-xs: 20rem;
+  max-w-sm: 24rem;
+  max-w-md: 28rem;
+  max-w-lg: 32rem;
+  max-w-xl: 36rem;
+  max-w-2xl: 42rem;
+  max-w-3xl: 48rem;
+  max-w-4xl: 56rem;
+  max-w-5xl: 64rem;
+  max-w-6xl: 72rem;
+  max-w-full: 100%;
+}
+
+@heights: {
+  h-0: 0;
+  h-1: 0.25rem;
+  h-2: 0.5rem;
+  h-3: 0.75rem;
+  h-4: 1rem;
+  h-5: 1.25rem;
+  h-6: 1.5rem;
+  h-8: 2rem;
+  h-10: 2.5rem;
+  h-12: 3rem;
+  h-16: 4rem;
+  h-20: 5rem;
+  h-24: 6rem;
+  h-32: 8rem;
+  h-40: 10rem;
+  h-48: 12rem;
+  h-56: 14rem;
+  h-64: 16rem;
+  h-auto: auto;
+  h-px: 1px;
+  h-full: 100%;
+  h-screen: 100vh;
+}
+
+@min-heights: {
+  min-h-0: 0;
+  min-h-full: 100%;
+  min-h-screen: 100vh;
+}
+
+/*-------------------------
 * Media Queries
 *--------------------------*/
 @xs: 480px;
