--- a/assets/less/components/buttons.less
+++ b/assets/less/components/buttons.less
@@ -147,12 +147,12 @@ button {
 }
 
 // OS detection
+.download-button .os_msi,
 .download-button .os_winsha1,
 .download-button .os_win64,
 .download-button .os_linux,
 .download-button .os_linux64,
-// Uncomment this to enable the win64 download buttons:
-// .win7up.x86.x64 .download-button .os_win,
+.win7up.x86.x64 .download-button .os_win,
 .android .download-button-desktop,
 .windows.arm .download-button .os_win,
 .linux.arm .download-button .os_linux,
@@ -166,8 +166,7 @@ button {
   display: none !important;
 }
 
-// Uncomment this to enable the win64 download buttons:
-// .win7up.x86.x64 .download-button .os_win64,
+.win7up.x86.x64 .download-button .os_win64,
 .linux .download-button .os_linux,
 .linux.x86.x64 .download-button .os_linux64,
 .windows .download-button .os_win,
