--- a/assets/less/components/links.less
+++ b/assets/less/components/links.less
@@ -3,12 +3,12 @@
 // file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
 a {
- .transition(@transition-default);
- cursor: pointer;
+  .transition(@transition-default);
+  cursor: pointer;
 }
 
 .nav-link {
-  &:extend(.ml-6, .mr-6, .text-white, .no-underline, .relative, .pt-2, .pb-2);
+  &:extend(.xl\:ml-6, .xl\:mr-6, .ml-4, .mr-4, .mt-2, .mb-2, .text-white, .no-underline, .relative, .pt-2, .pb-2, .inline-block);
   white-space: nowrap;
 
   &:after {
