--- a/website/_includes/base-resp.html
+++ b/website/_includes/base-resp.html
@@ -14,18 +14,22 @@
 
 {% block site_header %}
   <header id="masthead" class="bg-no-repeat bg-cover bg-top flex flex-col{% if active_page == 'index' %} bg-header{% else %} bg-header-page{% endif %}">
-    <section class="flex justify-between items-center p-6">
+    <section class="flex justify-between items-center p-6 flex-wrap">
       {% block site_header_logo %}
         <h2 class="mt-0 mb-0">
-          <a href="{{ url('thunderbird.index') }}" class="block w-56" title="{{ _('Thunderbird') }}" alt="{{ _('Thunderbird Vector Wordmark') }}">
-            {{ svg('logo-wordmark-white') }}
+          <a href="{{ url('thunderbird.index') }}" class="block w-48 md:w-16 lg:w-56" title="{{ _('Thunderbird') }}" alt="{{ _('Thunderbird Vector Wordmark') }}">
+            <i class="block md:hidden lg:block">{{ svg('logo-wordmark-white') }}</i>
+            <i class="hidden md:block lg:hidden">{{ svg('logo') }}</i>
           </a>
         </h2>
       {% endblock %}
 
       {% block site_header_nav %}
-        <nav id="nav-main" role="navigation">
-          <ul id="nav-main-menu" class="list-none p-0 flex items-center text-white font-md font-semibold">
+        <a href="{{ donate_url('header') }}" class="btn-donate md:hidden" target="_blank">
+          <span class="inline-block w-3 mr-1">{{ svg('heart') }}</span> {{_('Donate')}}
+        </a>
+        <nav id="nav-main" role="navigation" class="flex-grow md:flex-grow-0">
+          <ul id="nav-main-menu" class="list-none p-0 flex flex-wrap items-center text-white font-md font-semibold justify-around">
             <li>
               <a href="{{ url('thunderbird.features') }}" class="nav-link">{{_('Features')}}</a>
             </li>
@@ -44,7 +48,7 @@
             <li>
               <a href="{{ url('blog') }}" class="nav-link" target="_blank">{{_('Blog')}}</a>
             </li>
-            <li>
+            <li class="hidden md:inline">
               <a href="{{ donate_url('header') }}" class="btn-donate" target="_blank">
                 <span class="inline-block w-3 mr-1">{{ svg('heart') }}</span> {{_('Donate')}}
               </a>
