--- a/assets/less/base/fonts.less
+++ b/assets/less/base/fonts.less
@@ -57,3 +57,15 @@ each(@text-align, #(@k, @v) {
     text-align: @k;
   }
 });
+
+each(@breakpoints, #(@k, @v) {
+  @media (min-width: @k) {
+
+    each(@fonts, #(@i, @r) {
+      .@{v}\:@{r} {
+        font-size: @i;
+      }
+    });
+
+  }
+});
