Fully responsive home page, footer, and prefooter

--- a/assets/less/base/backgrounds.less
+++ b/assets/less/base/backgrounds.less
@@ -75,8 +75,8 @@ each(@background-size, #(@k, @v) {
 }
 
 .bg-body {
-  &:extend(.bg-top, .bg-no-repeat, .bg-contain);
-  background-image: url('../img/thunderbird/backgrounds/bg-body.png');
+  &:extend(.bg-top, .bg-repeat-x, .bg-contain);
+  background-image: url('../img/thunderbird/backgrounds/bg-body2.png');
 }
 
 .bg-logo {
