Fully responsive features page

--- a/website/_includes/site-prefooter.html
+++ b/website/_includes/site-prefooter.html
@@ -1,7 +1,7 @@
 <section class="pt-10 pb-10 lg:pt-20 lg:pb-20 flex bg-prefooter bg-grey-lighter">
   <section class="flex flex-col lg:flex-row flex-1 max-w-6xl mx-auto justify-between pl-8 pr-8">
     <article class="flex flex-1 lg:max-w-md mb-20 lg:mb-0">
-      <aside class="w-24 pt-4">
+      <aside class="w-16 md:w-24 pt-4">
         {{ high_res_img('thunderbird/handshake.png', {'alt': _('Get Involved'), 'class': 'w-full h-auto'}) }}
       </aside>
       <main class="flex flex-col flex-1 ml-4">
@@ -23,7 +23,7 @@
     </article>
 
     <article class="flex flex-1 lg:max-w-md mb-10 lg:mb-0">
-      <aside class="w-24 pt-4">
+      <aside class="w-16 md:w-24 pt-4">
         {{ high_res_img('thunderbird/logos/beta.png', {'alt': _('Thunderbird Beta'), 'class': 'w-full h-auto'}) }}
       </aside>
       <main class="flex flex-col flex-1 ml-4">
