--- a/website/_includes/site-footer.html
+++ b/website/_includes/site-footer.html
@@ -12,7 +12,7 @@
             <a href="{{ url('thunderbird.organizations') }}" class="nav-link" target="_blank">{{_('For Organizations')}}</a>
           </li>
           <li>
-            <a href="{{ url('thunderbird.get-involved') }}" class="nav-link" target="_blank">{{_('Get Involved')}}</a>
+            <a href="{{ url('thunderbird.get-involved') }}" class="nav-link">{{_('Get Involved')}}</a>
           </li>
           <li>
             <a href="{{ url('support') }}" class="nav-link" target="_blank">{{_('Get Help')}}</a>
