--- a/assets/less/components/headings.less
+++ b/assets/less/components/headings.less
@@ -3,7 +3,7 @@
 // file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
 .header-section {
-  &:extend(.uppercase, .mt-0, .mb-4, .font-2xl, .text-blue-dark, .flex, .items-center, .leading-normal, .text-center);
+  &:extend(.uppercase, .mt-0, .mb-4, .font-2xl, .text-blue-dark, .flex, .items-center, .leading-normal);
 
   span {
     &:extend(.bg-blue, .p-3, .mr-6, .text-white, .w-6, .h-6, .rounded-full, .leading-none, .border-blue-lightest);
