--- a/website/_includes/product-all-macros.html
+++ b/website/_includes/product-all-macros.html
@@ -59,17 +59,24 @@
 {% endmacro %}
 
 {% macro build_row(platforms, build) %}
-  <aside id="{{ build.locale }}" data-search="{{ build.name_en|lower }}, {{ build.name_native|lower }}" class="flex flex-row flex-wrap items-center bg-white shadow-md mb-4 rounded">
-    <h4 class="subheader-section flex flex-col flex-1 mb-0 p-2 pl-3 pr-3">
+  <aside id="{{ build.locale }}" data-search="{{ build.name_en|lower }}, {{ build.name_native|lower }}" class="flex flex-col lg:flex-row flex-wrap items-center bg-white shadow-md mb-4 rounded">
+    <h4 class="subheader-section flex flex-col flex-1 items-center lg:items-start mb-0 p-2 pl-3 pr-3">
       {{ build.name_en }}
       <small class="font-normal font-regular tracking-normal normal-case text-black-lightest">
         {{ build.name_native }}
       </small>
     </h4>
-    <aside class="p-1 pl-2 pr-2">
-      {% for p_name, p_label in platforms %}
-        {{ build_link(build, p_name, _('Download for %(platform)s in %(locale)s')|format(platform=p_label|replace('\n', ' '), locale=build.name_en), _('%(platform)s')|format(platform=p_label|replace('\n', ' '))) }}
-      {% endfor %}
+    <aside class="flex flex-col p-1 pl-2 pr-2 items-center lg:items-end">
+      <aside class="flex flex-row flex-wrap justify-center">
+        {% for p_name, p_label in platforms[:4] %}
+          {{ build_button(build, p_name, _('Download for %(platform)s in %(locale)s')|format(platform=p_label|replace('\n', ' '), locale=build.name_en), _('%(platform)s')|format(platform=p_label|replace('\n', ' '))) }}
+        {% endfor %}
+      </aside>
+      <aside class="flex flex-row flex-wrap justify-center mt-2 mb-2 lg:mb-0">
+        {% for p_name, p_label in platforms[-2:] %}
+          {{ build_link(build, p_name, _('Download for %(platform)s in %(locale)s')|format(platform=p_label|replace('\n', ' '), locale=build.name_en), _('%(platform)s')|format(platform=p_label|replace('\n', ' '))) }}
+        {% endfor %}
+      </aside>
     </aside>
   </aside>
 {% endmacro %}
@@ -79,10 +86,24 @@
   platform: Value in build.platforms to use. One of 'win', 'win64', 'osx', 'linux' and 'linux64'.
   tooltip: Text to display as tooltip for download link.
 #}
+{% macro build_button(build, platform, tooltip, text) %}
+  {% if build.platforms[platform] %}
+    <a href="{{ build.platforms[platform].download_url }}" title="{{ tooltip }}"
+      class="btn-download-inline"
+      data-download-version="{{ platform }}"
+      data-download-language="{{ build.name_en|lower}}" data-link-type="download"
+      {% if platform == 'android' %} data-download-os="Android"
+      {% elif platform == 'ios' %} data-download-os="iOS"
+      {% else %} data-download-os="Desktop"{% endif %}>
+        <span class="inline-block w-3 mr-1">{{ svg('download') }}</span> {{ text }}
+    </a>
+  {% endif %}
+{% endmacro %}
+
 {% macro build_link(build, platform, tooltip, text) %}
   {% if build.platforms[platform] %}
     <a href="{{ build.platforms[platform].download_url }}" title="{{ tooltip }}"
-      class="btn-download-inline {% if platform == 'winsha1' %} hidden{% endif %}"
+      class="btn-download-link"
       data-download-version="{{ platform }}"
       data-download-language="{{ build.name_en|lower}}" data-link-type="download"
       {% if platform == 'android' %} data-download-os="Android"
