Responsive release notes, system requirements, and thunderbird sub folder pages

--- a/website/_includes/site-prefooter.html
+++ b/website/_includes/site-prefooter.html
@@ -1,3 +1,7 @@
+{# This Source Code Form is subject to the terms of the Mozilla Public
+ # License, v. 2.0. If a copy of the MPL was not distributed with this
+ # file, You can obtain one at http://mozilla.org/MPL/2.0/. -#}
+
 <section class="pt-10 pb-10 lg:pt-20 lg:pb-20 flex bg-prefooter bg-grey-lighter">
   <section class="flex flex-col lg:flex-row flex-1 max-w-6xl mx-auto justify-between pl-8 pr-8">
     <article class="flex flex-1 lg:max-w-md mb-20 lg:mb-0">
