--- a/website/_includes/release-notes.html
+++ b/website/_includes/release-notes.html
@@ -11,11 +11,11 @@
 {% set channel_name = channel_name|default('') %}
 
 {% block header_content %}
-  <section class="text-center text-white flex flex-col items-center w-full max-w-6xl mx-auto pl-8 pr-8">
-    <h1 class="font-hero font-thin mt-10 mb-8">
+  <section class="text-center text-white flex flex-col items-center xl:w-full max-w-6xl mx-auto pl-8 pr-8">
+    <h1 class="font-4xl md:font-hero font-thin md:mt-10 mb-8">
       {{ _('Thunderbird {channel} Notes')|f(channel=channel_name) }}
     </h1>
-    <p class="font-xl tracking-wide leading-relaxed max-w-4xl mb-10 mt-0">
+    <p class="font-lg md:font-xl tracking-wide leading-relaxed max-w-4xl mb-10 mt-0">
       {{ _('Version {version}, first offered to {channel} channel users on {date}')|f(channel=release.channel, date=release.release_date|l10n_format_date, version=release.version) }}
     </p>
   </section>
@@ -35,8 +35,8 @@
 {% endblock %}
 
 {% block content %}
-  <section  class="pt-20 flex justify-center items-center pl-20 pr-20">
-    <aside class="flex flex-col w-full ml-16 mr-16">
+  <section  class="pt-20 flex justify-center items-center pl-8 pr-8">
+    <aside class="flex flex-col w-full max-w-6xl lg:ml-16 lg:mr-16">
       <p class="font-lg tracking-wider leading-loose mb-6 p-links-blue">
         {{ _('Check out "What’s New" and "Known Issues" for this version of Thunderbird below. As always, you’re encouraged to <a href="%(feedback)s" target="_blank">tell us what you think</a>, or <a href="%(bugzilla)s" target="_blank">file a bug in Bugzilla</a>')|format(feedback='https://support.mozilla.org/questions/new/thunderbird', bugzilla='https://bugzilla.mozilla.org/') }}
       </p>
@@ -51,8 +51,8 @@
   </section>
 
   {% if notes %}
-    <section class="pb-10 flex flex-wrap justify-center items-center pl-20 pr-20 bg-grey-lighter">
-      <aside class="flex flex-col w-full ml-16 mr-16">
+    <section class="pb-10 flex flex-wrap justify-center items-center pl-8 pr-8 bg-grey-lighter">
+      <aside class="flex flex-col w-full max-w-6xl lg:ml-16 lg:mr-16">
         {% set section = namespace(name='') %}
         {% for group in range(release.groups|length) %}
           {% for note in notes %}
