Add responsive CSS to all pages. (#126)
* Responsive main nav

* Fully responsive home page, footer, and prefooter

* Fully responsive features page

* Fully responsive Get Involved page

* Fully responsive About page

* Responsive download list

* Responsive release notes, system requirements, and thunderbird sub folder pages

--- a/assets/less/base/flex.less
+++ b/assets/less/base/flex.less
@@ -64,3 +64,27 @@ each(@flex-shrink, #(@k, @v) {
     flex-shrink: @k;
   }
 });
+
+each(@breakpoints, #(@k, @v) {
+  @media (min-width: @k) {
+
+    each(@flex-direction, #(@i, @r) {
+      .@{v}\:@{r} {
+        flex-direction: @i;
+      }
+    });
+
+    each(@flex-grow, #(@i, @r) {
+      .@{v}\:@{r} {
+        flex-grow: @i;
+      }
+    });
+
+    each(@align-items, #(@i, @r) {
+      .@{v}\:@{r} {
+        align-items: @i;
+      }
+    });
+
+  }
+});
