--- a/assets/less/base/fonts.less
+++ b/assets/less/base/fonts.less
@@ -3,10 +3,10 @@
 // file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
 body {
-    font-family: @base-font;
-    &:extend(.font-base, .tracking-wide, .text-blue-darker);
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+  font-family: @base-font;
+  &:extend(.font-base, .tracking-wide, .text-blue-darker);
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 // Font Sizes
@@ -55,5 +55,17 @@ each(@text-transform, #(@k, @v) {
 each(@text-align, #(@k, @v) {
   .@{v} {
     text-align: @k;
+  }
+});
+
+each(@breakpoints, #(@k, @v) {
+  @media (min-width: @k) {
+
+    each(@fonts, #(@i, @r) {
+      .@{v}\:@{r} {
+        font-size: @i;
+      }
+    });
+
   }
 });
