--- a/assets/less/components/buttons.less
+++ b/assets/less/components/buttons.less
@@ -8,7 +8,8 @@ button {
 }
 
 .btn-donate {
-  &:extend(.ml-6, .mr-6, .text-white, .font-base, .font-semibold, .no-underline, .uppercase, .block, .pt-2, .pb-2, .pl-3, .pr-3, .bg-donate-button, .rounded-xs, .shadow);
+  &:extend(.xl\:ml-6, .xl\:mr-6, .md\:ml-4, .md\:mr-4, .text-white, .font-base, .font-semibold, .no-underline, .uppercase, .block, .pt-2, .pb-2, .pl-3, .pr-3, .bg-donate-button, .rounded-xs, .shadow);
+  white-space: nowrap;
 
   &:hover,
   &:focus {
@@ -34,6 +35,15 @@ button {
   &:focus {
     &:extend(.shadow-md, .bg-green-light, .text-white);
     .transform(translateY(-7%));
+  }
+}
+
+.btn-download-link {
+  &:extend(.m-1, .text-black-lightest, .font-base, .font-semibold, .no-underline, .capitalize, .inline-block);
+
+  &:hover,
+  &:focus {
+    &:extend(.text-green-light);
   }
 }
 
