--- a/assets/less/base/backgrounds.less
+++ b/assets/less/base/backgrounds.less
@@ -75,13 +75,18 @@ each(@background-size, #(@k, @v) {
 }
 
 .bg-body {
-  &:extend(.bg-top, .bg-no-repeat, .bg-contain);
-  background-image: url('../img/thunderbird/backgrounds/bg-body.png');
+  &:extend(.bg-top, .bg-repeat-x, .bg-contain);
+  background-image: url('../img/thunderbird/backgrounds/bg-body2.png');
 }
 
 .bg-logo {
   &:extend(.bg-right-bottom, .bg-no-repeat, .bg-contain);
-  background-image: url('../img/thunderbird/backgrounds/bg-logo.png');
+  background-image: none;
+  background-position-x: 95%;
+
+  @media (min-width: @lg) {
+    background-image: url('../img/thunderbird/backgrounds/bg-logo.png');
+  }
 }
 
 .bg-calendar {
